--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@octokit/rest": "^15.16.1",
+    "brace": "^0.11.1",
     "github-api": "https://github.com/marcpalm/github-api.git#master",
     "react": "^16.6.0",
+    "react-ace": "^6.2.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
